[metadata]
name = proper_tea
author = Liam Pattinson
author_email = liampattinson@gmail.com
description = A Python package for automating the creation of common class properties
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LiamPattinson/proper_tea
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source =  https://github.com/LiamPattinson/proper_tea
    Tracker = https://github.com/LiamPattinson/proper_tea/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    importlib-metadata; python_version < "3.8"

[options.extras_require]
tests = 
    pytest >= 5.4.3
